--- a/module_visualize/test.yaml
+++ b/module_visualize/test.yaml
@@ -1,13 +1,16 @@
 module:
   # [from id, repeats num, module name, *args]
-  - [Focus, [3, 16], [1, 3, 224, 224]]
-  - [Conv, [128, 64, 3, 2], [64, 128, 64, 64]]
-  - [Conv, [64, 64, 3, 2], [1, 64, 10, 10]] 
-  - [C2f, [128, 3, True], [1, 128, 5, 5]]
-  - [SPP, [512, 1024], [1, 512, 7, 7]]
-  - [SPPF, [512, 1024, 5], [1, 512, 7, 7]]
-  - [ChannelAttention, [16], [1, 16, 5, 5]]
-  - [StemBlock, [3, 64], [1, 3, 224, 224]]
-  - [Detect, [80, [144]], [1, 1, 144, 7, 7]]  # Detect(P3, P4, P5)
+  # - [Focus, [3, 16], [1, 3, 224, 224]]
+  # - [Conv, [128, 64, 3, 2], [64, 128, 64, 64]]
+  # - [Conv, [64, 64, 3, 2], [1, 64, 10, 10]] 
+  # - [C2f, [128, 3, True], [1, 128, 5, 5]]
+  # - [SPP, [512, 1024], [1, 512, 7, 7]]
+  # - [SPPF, [512, 1024, 5], [1, 512, 7, 7]]
+  # - [ChannelAttention, [16], [1, 16, 5, 5]]
+  # - [StemBlock, [3, 64], [1, 3, 224, 224]]
+  # - [Detect, [80, [144]], [1, 1, 144, 7, 7]]  # Detect(P3, P4, P5)
   # - [ChannelAttention, [16], [1, 16, 5, 5]]
   # - [Detect, [20, [84]], [1, 1, 84, 1, 84]]  # Detect(P3, P4, P5)
+  # - [TransformerLayer, [8, 8], [512, 8]]
+  # - [Fp32LayerNorm, [8, 8], [512, 8]]
+  - [TransformerEncoderLayer, [8, 8], [512, 8]]
